--- a/loadingdialog/src/main/res/layout/loading.xml
+++ b/loadingdialog/src/main/res/layout/loading.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/lodingdialogstyle">
+    android:background="@drawable/dialogstyle">
 
     <LinearLayout
         android:layout_width="match_parent"
