--- a/loadingdialog/src/main/res/values/colors.xml
+++ b/loadingdialog/src/main/res/values/colors.xml
@@ -5,5 +5,6 @@
     <color name="colorAccent">#D81B60</color>
     <color name="transparent">#00000000</color>
     <color name="white">#ffffff</color>
-    <color name="green">#24d447</color>
+    <color name="dialog_green">#24d447</color>
+    <color name="dialog_red">#ff0000</color>
 </resources>
