将popupwindow实现改成dialog实现

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,12 +5,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
-
-    <hzkj.cc.loadingdialog.AttdenceView
-        android:id="@+id/sss"
+<Button
+    android:id="@+id/s"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="222"/>
+    <Button
+        android:id="@+id/ss"
         android:layout_width="wrap_content"
+        android:layout_toRightOf="@id/s"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        app:inCircleColor="@color/hzBlue"
-        app:outCircleColor="@color/hzBlue1" />
+        android:text="222222"/>
 </RelativeLayout>
