--- a/loadingdialog/src/main/res/layout/fail.xml
+++ b/loadingdialog/src/main/res/layout/fail.xml
@@ -2,12 +2,13 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/dialogstyle">
+  >
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="200dp"
+        android:layout_height="180dp"
         android:layout_centerInParent="true"
+        android:background="@drawable/dialogstyle"
         android:gravity="center"
         android:orientation="vertical">
 
