--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,10 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
-<Button
-    android:id="@+id/s"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="222"/>
 
+    <hzkj.cc.loadingdialog.AttdenceView
+        android:id="@+id/s"
+        android:layout_width="130dp"
+        android:layout_height="130dp" />
 </RelativeLayout>
