--- a/loadingdialog/src/main/res/layout/fail.xml
+++ b/loadingdialog/src/main/res/layout/fail.xml
@@ -21,7 +21,7 @@
             android:id="@+id/text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="10dp"
             android:gravity="center"
             android:textSize="16sp"
             android:textStyle="bold" />
@@ -33,6 +33,8 @@
             android:layout_marginTop="10dp"
             android:background="@drawable/failbuttonstyle"
             android:text="好的"
+            android:textStyle="bold"
+
             android:textColor="@color/white"
             android:textSize="16sp" />
     </LinearLayout>
